Version 3.7.0     unreleased

	* Drop support for Python 3.7.

Version 3.6.9     09 Nov 2022

	* Support Python 3.11.
	* Use locale.getlocale() instead of .getdefaultlocale() for Python >= 3.11.
	* Adjust GHA build to run MacOS and Windows tests only on latest Python.

Version 3.6.8     24 Oct 2022

	* Remove execute bit from amazons3.py and span.py for Debian policy.

Version 3.6.7     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.
	* Rework the GitHub Actions build process to pull out shared code.

Version 3.6.6     05 Sep 2022

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint v2.15.0 and address warnings.
	* Fix Pylint's configured class-attribute-naming-style to be snake_case.
	* Adjust Black configuration to target Python 3.7, 3.8, 3.9, and 3.10.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target Windows and MacOS.
	* Fix problems with test suite under Windows when running in GitHub Actions.
	* Update various dependencies for the developer environment.

Version 3.6.5     30 Apr 2022

	* Adjust the pyproject.toml include directive to limit what goes into wheel.
	* Remove the Safety scanner from the pre-commit hooks and GitHub action.

Version 3.6.4     14 Nov 2021

	* Adjust dependencies and build process to support Python 3.10.

Version 3.6.3     13 Mar 2021

	* Improve logged output for failed pre/post action hooks.

Version 3.6.2     17 Feb 2021

	* Standardize format of GPL license statement in CREDITS.

Version 3.6.1     07 Feb 2021

	* Make minor structural improvements to the build process.
	* Publish coverage data to coveralls.io in GitHub workflow.

Version 3.6.0     03 Feb 2021

	* Always use '/' internally for paths, even on the Windows platform.
	* Change the way archive filenames are generated to eliminate leading '-' characters.