@@ -18,7 +18,7 @@ filelock==3.9.0 ; python_version >= "3.7" and python_version < "4"
 identify==2.5.11 ; python_version >= "3.7" and python_version < "4"
 idna==3.4 ; python_version >= "3.7" and python_version < "4"
 imagesize==1.4.1 ; python_version >= "3.7" and python_version < "4"
-importlib-metadata==5.2.0 ; python_version >= "3.7" and python_version < "3.10"
+importlib-metadata==5.2.0 ; python_version >= "3.7" and python_version < "4"
 isort==5.11.4 ; python_version >= "3.7" and python_version < "4"
 jinja2==3.1.2 ; python_version >= "3.7" and python_version < "4"
 lazy-object-proxy==1.8.0 ; python_version >= "3.7" and python_version < "4"
@@ -53,4 +53,4 @@ unidecode==1.3.6 ; python_version >= "3.7" and python_version < "4"
 urllib3==1.26.13 ; python_version >= "3.7" and python_version < "4"
 virtualenv==20.17.1 ; python_version >= "3.7" and python_version < "4"
 wrapt==1.14.1 ; python_version >= "3.7" and python_version < "4"
-zipp==3.11.0 ; python_version >= "3.7" and python_version < "3.10"
+zipp==3.11.0 ; python_version >= "3.7" and python_version < "4"
