@@ -73,7 +73,7 @@ from CedarBackup3.cli import (
 )
 from CedarBackup3.config import Config
 from CedarBackup3.filesystem import BackupFileList, compareDigestMaps, normalizeDir
-from CedarBackup3.release import AUTHOR, COPYRIGHT, DATE, EMAIL, VERSION
+from CedarBackup3.release import AUTHOR, EMAIL, VERSION
 from CedarBackup3.util import UNIT_BYTES, UNIT_SECTORS, Diagnostics, convertSize, displayBytes, mount, unmount
 
 ########################################################################
@@ -275,10 +275,10 @@ def _version(fd=sys.stdout):
     """
     fd.write("\n")
     fd.write(" Cedar Backup 'span' tool.\n")
-    fd.write(" Included with Cedar Backup version %s, released %s.\n" % (VERSION, DATE))
+    fd.write(" Included with Cedar Backup version %s.\n" % VERSION)
     fd.write("\n")
-    fd.write(" Copyright (c) %s %s <%s>.\n" % (COPYRIGHT, AUTHOR, EMAIL))
-    fd.write(" See CREDITS for a list of included code and other contributors.\n")
+    fd.write(" Copyright (c) %s <%s>.\n" % (AUTHOR, EMAIL))
+    fd.write(" See NOTICE for a list of included code and other contributors.\n")
     fd.write(" This is free software; there is NO warranty.  See the\n")
     fd.write(" GNU General Public License version 2 for copying conditions.\n")
     fd.write("\n")
